--- a/src/app.css
+++ b/src/app.css
@@ -1,15 +1,19 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
 core-header-panel {
   background: white;
   /* height: 100% fails here on some browsers */
   height: 100vh;
   width: 100vw;
 }
+
 core-toolbar {
   background-color: #00bcd4;
+  color: #fff;
 }
+
 p {
   margin: 20px;
   padding: 80px 20px;
