--- a/src/elements/feed-tabs.jade
+++ b/src/elements/feed-tabs.jade
@@ -9,7 +9,7 @@ polymer-element(name='feed-tabs')
         color: #fff;
       }
 
-    paper-tabs(selected="0" flex nobar )
+    paper-tabs(selected="{{selectedTab}}" flex nobar )
       template(repeat='{{feed in feeds}}')
         paper-tab {{feed.feed.title}}
 
@@ -18,5 +18,11 @@ polymer-element(name='feed-tabs')
       ready: function() {
         this.selectedTab = 0
         this.feeds = document.querySelector('feed-list').feeds;
+        this.sidebar = document.querySelector('feed-sidebar');
+        this.addEventListener('core-select', function(e){
+          if(e.detail.isSelected) {
+            this.sidebar.data = this.feeds[this.selectedTab];
+          }
+        });
       }
     });
