--- a/src/index.jade
+++ b/src/index.jade
@@ -15,7 +15,7 @@ html(lang='en' ng-app='rss')
     link(rel="import" href="elements/feed-tabs.html")
     link(rel="import" href="elements/feed-sidebar.html")
     link(rel="import" href="elements/feed-main.html")
-    link(href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css')
     link(href='css/app.css' rel='stylesheet')
     style(shim-shadowdom).
       paper-icon-button {
