--- a/src/elements/add-feed-dialog.jade
+++ b/src/elements/add-feed-dialog.jade
@@ -11,9 +11,8 @@ polymer-element(name='add-feed-dialog')
     polymer-jsonp#ajaxfeed(url='https://ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=15&q={{feedUrl}}&callback=')
     paper-dialog#add(heading='Add New Field' transition='paper-dialog-transition-center')
       paper-input(floatingLabel label='Feed URL' value='{{feedUrl}}')
-      br
-      paper-button(label='Submit' on-tap="{{addFeed}}")
-      paper-toast#toast(text='{{toastMessage}}')
+      paper-button(label='Submit' on-tap="{{addFeed}}" affirmative)
+    paper-toast#toast(text='{{toastMessage}}')
   script.
     Polymer('add-feed-dialog', {
       ready: function(){
